--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.sigma-it</groupId>
-    <artifactId>sigma-vote</artifactId>
+    <groupId>ru.ulmc</groupId>
+    <artifactId>community-feedback</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     
