--- a/src/main/resources/app_defaults.properties
+++ b/src/main/resources/app_defaults.properties
@@ -9,12 +9,12 @@ auth.ldap.baseSearchDn=DC=bbb,DC=ccc
 # Параметры БД
 db.driverClass=org.apache.derby.jdbc.ClientDriver
 db.url=jdbc:derby:cf.db
-db.dialect=org.hibernate.dialect.DerbyDialect
+db.dialect=org.hibernate.dialect.DerbyTenSevenDialect
 db.user=admin
 db.password=admin
 
 # Функциональные параметры
 ## Актуально для внешнего источника пользователей (LDAP).
 ## Список пользователей, наделенных админскими правами.
-users.admins=adminname1|adminname2
+app.users.admins=adminname1|adminname2
 app.createDemo=true
