#4 Введение ORM-фреймоворка, правки авторизации через DB, подправлен контроллер

--- a/src/main/resources/app_defaults.properties
+++ b/src/main/resources/app_defaults.properties
@@ -8,7 +8,7 @@ auth.ldap.baseSearchDn=DC=bbb,DC=ccc
 
 # Параметры БД
 db.driverClass=org.apache.derby.jdbc.ClientDriver
-db.url=jdbc:derby:cf.db
+db.url=jdbc:derby:cf.db;create=true
 db.dialect=org.hibernate.dialect.DerbyTenSevenDialect
 db.user=admin
 db.password=admin
